src/main/scala/chapter3/output/RunSerialAssignments.output
// #output
SerialAssignments.scala:4: error: type mismatch;
 found   : Unit
 required: Int
a = b = 3
      ^
one error found
// #output

